# MuscleMate

./: .gitignore  README.md  pyproject.toml  surgical.robotic_arm.py
.github/workflows/: ci.yml
bench_logs/: README.md  threshold_sweep_summary.csv
commissioning/: bench_checklist.yaml
control/: __init__.py  cli.py  emg_features.py  gesture.py  runner.py  state_machine.py  trace.py  utils.py
docs/: BENCH_COMMISSIONING.md  BUILD_INSTRUCTIONS.md  INTEGRATION_HANDOFF.md  SAFETY_INTERLOCK_MATRIX.md  power_budget.md  signal_chain.md
hardware/: README.md  __init__.py  arm.py  front_end_bench.md  safeguarded_arm.py
hardware/adapters/: __init__.py  base.py  bench_rig.py  integration_rig.py
musclemate/: __init__.py  cli.py  config.py
musclemate/control/: gesture.py  runner.py  state_machine.py
musclemate/hardware/: emg.py
musclemate/sim/: emg_profiles.py
safety/: __init__.py  interlocks.py
scripts/: bench_commission.py  run_sequence.py  threshold_sweep.py
sequences/: __init__.py  motion_sequences.py
sim/: __init__.py  emg_profiles.py
tests/: test_adapters.py  test_gesture.py  test_safety.py  test_sequences.py  test_sim.py
